--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="source\SuperPack.cpp" />
     <ClCompile Include="source\Tile.cpp" />
     <ClCompile Include="source\Tower.cpp" />
+    <ClCompile Include="source\TrickShotBullet.cpp" />
     <ClCompile Include="source\WallPickup.cpp" />
     <ClCompile Include="source\WaveCompleteMessage.cpp" />
     <ClCompile Include="source\ZombieFactory.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="source\SuperPack.h" />
     <ClInclude Include="source\Tile.h" />
     <ClInclude Include="source\Tower.h" />
+    <ClInclude Include="source\TrickShotBullet.h" />
     <ClInclude Include="source\WallPickup.h" />
     <ClInclude Include="source\WaveCompleteMessage.h" />
     <ClInclude Include="source\WaveData.h" />
