Stats are in the game press P to go to Stat Page

--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -357,6 +357,9 @@
     <ClCompile Include="source\StatTracker.cpp">
       <Filter>StatTracker</Filter>
     </ClCompile>
+    <ClCompile Include="source\StatsState.cpp">
+      <Filter>Game States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -667,6 +670,9 @@
     </ClInclude>
     <ClInclude Include="source\StatTracker.h">
       <Filter>StatTracker</Filter>
+    </ClInclude>
+    <ClInclude Include="source\StatsState.h">
+      <Filter>Game States</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
