--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -369,6 +369,9 @@
     <ClCompile Include="source\StatsState.cpp">
       <Filter>Game States</Filter>
     </ClCompile>
+    <ClCompile Include="source\ModePickerState.cpp">
+      <Filter>Game States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -687,6 +690,9 @@
       <Filter>Towers/Traps</Filter>
     </ClInclude>
     <ClInclude Include="source\StatsState.h">
+      <Filter>Game States</Filter>
+    </ClInclude>
+    <ClInclude Include="source\ModePickerState.h">
       <Filter>Game States</Filter>
     </ClInclude>
   </ItemGroup>
