--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="source\CreatePlaceableMessage.cpp" />
     <ClCompile Include="source\CreatePlayerSpawnMessage.cpp" />
     <ClCompile Include="source\CreateProjectileMessage.cpp" />
+    <ClCompile Include="source\CreateShopMessage.cpp" />
     <ClCompile Include="source\CreateSlowZombieMessage.cpp" />
     <ClCompile Include="source\CreateTowerMessage.cpp" />
     <ClCompile Include="source\CreateTrapMessage.cpp" />
@@ -86,6 +87,7 @@
     <ClCompile Include="source\Rocket.cpp" />
     <ClCompile Include="source\RZBN.cpp" />
     <ClCompile Include="source\Shop.cpp" />
+    <ClCompile Include="source\ShopEntity.cpp" />
     <ClCompile Include="source\ShotgunPellet.cpp" />
     <ClCompile Include="source\SlowZombie.cpp" />
     <ClCompile Include="source\SpeedPickup.cpp" />
@@ -148,6 +150,7 @@
     <ClInclude Include="source\CreatePlaceableMessage.h" />
     <ClInclude Include="source\CreatePlayerSpawnMessage.h" />
     <ClInclude Include="source\CreateProjectileMessage.h" />
+    <ClInclude Include="source\CreateShopMessage.h" />
     <ClInclude Include="source\CreateSlowZombieMessage.h" />
     <ClInclude Include="source\CreateTowerMessage.h" />
     <ClInclude Include="source\CreateTrapMessage.h" />
@@ -197,6 +200,7 @@
     <ClInclude Include="source\Rocket.h" />
     <ClInclude Include="source\RZBN.h" />
     <ClInclude Include="source\Shop.h" />
+    <ClInclude Include="source\ShopEntity.h" />
     <ClInclude Include="source\ShotgunPellet.h" />
     <ClInclude Include="source\SlowZombie.h" />
     <ClInclude Include="source\SpeedPickup.h" />
