--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -372,6 +372,12 @@
     <ClCompile Include="source\ModePickerState.cpp">
       <Filter>Game States</Filter>
     </ClCompile>
+    <ClCompile Include="source\ShopEntity.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="source\CreateShopMessage.cpp">
+      <Filter>Messages</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -694,6 +700,12 @@
     </ClInclude>
     <ClInclude Include="source\ModePickerState.h">
       <Filter>Game States</Filter>
+    </ClInclude>
+    <ClInclude Include="source\ShopEntity.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CreateShopMessage.h">
+      <Filter>Messages</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
