--- a/Soorry_StrawMan.vcxproj.filters
+++ b/Soorry_StrawMan.vcxproj.filters
@@ -381,6 +381,12 @@
     <ClCompile Include="source\CreateShopMessage.cpp">
       <Filter>Messages</Filter>
     </ClCompile>
+    <ClCompile Include="source\Explosion.cpp">
+      <Filter>Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="source\CreateExplosionMessage.cpp">
+      <Filter>Messages</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SGD Wrappers\SGD_AudioManager.h">
@@ -708,6 +714,12 @@
       <Filter>Entities</Filter>
     </ClInclude>
     <ClInclude Include="source\CreateShopMessage.h">
+      <Filter>Messages</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Explosion.h">
+      <Filter>Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CreateExplosionMessage.h">
       <Filter>Messages</Filter>
     </ClInclude>
   </ItemGroup>
