--- a/Soorry_StrawMan.vcxproj
+++ b/Soorry_StrawMan.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="source\Button.h" />
     <ClInclude Include="source\CreateBeaverZombieMessage.h" />
     <ClInclude Include="source\CreateDroneMessage.h" />
+    <ClInclude Include="source\CreateEventAreaMessage.h" />
     <ClInclude Include="source\CreateExplosionMessage.h" />
     <ClInclude Include="source\CreateFastZombieMessage.h" />
     <ClInclude Include="source\CreateGrenadeMessage.h" />
@@ -165,6 +166,7 @@
     <ClInclude Include="source\Enemy.h" />
     <ClInclude Include="source\Entity.h" />
     <ClInclude Include="source\EntityManager.h" />
+    <ClInclude Include="source\EventArea.h" />
     <ClInclude Include="source\Explosion.h" />
     <ClInclude Include="source\FastZombie.h" />
     <ClInclude Include="source\FireRatePickup.h" />
